[package]
name = "serde_ini"
version = "0.2.0"
authors = ["arcnmx"]

description = "Windows INI file {de,}serialization"
keywords = ["ini", "cfg", "serde"]

documentation = "http://arcnmx.github.io/serde-ini/serde_ini"
repository = "https://github.com/arcnmx/serde-ini"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
result = "1"
serde = { version = "1", features = ["derive"] }
void = "^1"
